testsuite/tests/typecheck/should_fail/UnliftedNewtypesNotEnabled.stderr

UnliftedNewtypesNotEnabled.hs:9:1: error: [GHC-55233]
    • Newtype has non-* return kind ‘TYPE GHC.Types.IntRep’
    • In the newtype declaration for ‘Baz’
    Suggested fix:
      Perhaps you intended to use the ‘UnliftedNewtypes’ extension
